# GraphCProj

./: CMakeLists.txt
graph_data/: test.txt  test1.txt  test2.txt
src/: main.c  parser.c  parser.h  renderer.c  renderer.h  shader.c  shader.h  texture.c  texture.h  vertex.c  vertex.h
